--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.6
   shared_preferences: ^2.0.15
+  flutter_launcher_icons: ^0.11.0
 
+flutter_icons :
+  android : true
+  ios : true
+  image_path: "assets/logo.jpg"
 
 dev_dependencies:
   flutter_test:
